CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -pedantic -Wextra")

SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_DEBUG} -O2 -D_FORTIFY_SOURCE=2")

ADD_LIBRARY(parampp STATIC
	parampp.cpp)

IF(PARAMPP_EXAMPLE)
    ADD_EXECUTABLE(example example.cpp)
    TARGET_LINK_LIBRARIES(example parampp)
ENDIF(PARAMPP_EXAMPLE)
